tests/parser/bug_66/test2.m.out
In test2.m, line 8
|     function y = break
|                  ^^^^^ error: expected IDENTIFIER, found KEYWORD instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
