tests/parser/bug_66/test2.m
% (c) Copyright 2019 Florian Schanda

classdef test2
  methods
    function y = end
      y = 12;
    end
    function y = break
      y = 12;
    end
  end
end
